# prj_dw_entradas

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt  setup_instant_client.sh
.astro/: config.yaml
.dlt/: config.toml  secrets.toml
dags/: DAG_notas.py
dbt_dw_entradas/: .user.yml  dbt_project.yml  profiles.yml
dbt_dw_entradas/models/mart/mart_entradas/: d_departamentos.sql  d_fornecedores.sql  d_tipo_documento.sql  f_nf_servico.sql  f_pagamentos.sql
dbt_dw_entradas/models/staging/staging_entradas/: schema.yml  sources.yml  stg_con_pag.sql  stg_departamentos.sql  stg_ent_serv.sql  stg_fornecedores.sql  stg_itcon_pag.sql  stg_oficina.sql  stg_pagcon_pag.sql  stg_ratcon_pag.sql  stg_tipo_documento.sql
dbt_dw_entradas/models/staging/staging_entradas_mv/: schema.yml  sources.yml  stg_con_pag.sql  stg_departamentos.sql  stg_ent_serv.sql  stg_fornecedores.sql  stg_itcon_pag.sql  stg_pagcon_pag.sql  stg_ratcon_pag.sql  stg_tipo_documento.sql
include/: constants.py  profiles.py
script_ingestao/: source_ingestao.py
